--- a/.README.md
+++ b/.README.md
@@ -9,42 +9,22 @@ Additionally, it has slightly different semantics. Putting a value into the map 
 <!--START_SECTION:jsdoc-->
 <!--END_SECTION:jsdoc-->
 
-## Example Usage
+<!--START_SECTION:file:TUTORIAL.md-->
+<!--END_SECTION:file:TUTORIAL.md-->
 
-```javascript
-const preData = [['A',['B','B','C']]]
-const mvm = new MultiValueMap(preData,{ valueType: SetCollection })
-mvm.set('D', 'E')
-mvm.set('D', 'E')
-const value = mvm.get('A')
-console.log( value ) // [ 'B', 'C' ]
-for (let [key, values] of mvm.entries()) {
-  console.log(key, values.getValue());
-}
-// A [ 'B', 'C' ]
-// D [ 'E' ]
-```
+<!--START_SECTION:file:INSTALLATION.md-->
+<!--END_SECTION:file:INSTALLATION.md-->
 
-## Installation Instructions
+## License
 
-This project, hosted alternatively in GitHub, not NPM, requires you append the following to a
-project level file `./.npmrc`
-
-```
-@psenger:registry=https://npm.pkg.github.com
-```
-
-Once completed, you can then execute either `npm` or `yarn` to install.
-
-```bash
-npm install @psenger/multivalue-map --save
-```
+<!--START_SECTION:file:LICENSE-->
+<!--END_SECTION:file:LICENSE-->
 
 ## Deployment Steps
 
 * create a pull request from `dev` to `main`
 * check out `main`
 * `npm version patch -m "message here" or minor`
-* `npm publish`
+* `npm publish --access public`
 * Then switch to `dev` branch
 * Then merge `main` into `dev` and push `dev` to origin
