--- a/.README.md
+++ b/.README.md
@@ -6,14 +6,17 @@ Additionally, it has slightly different semantics. Putting a value into the map 
 
 [![js-standard-style](https://img.shields.io/badge/code%20style-standard-brightgreen.svg)](http://standardjs.com)
 
+<!--START_SECTION:toc-->
+<!--END_SECTION:toc-->
+
+<!--START_SECTION:file:INSTALLATION.md-->
+<!--END_SECTION:file:INSTALLATION.md-->
+
 <!--START_SECTION:jsdoc-->
 <!--END_SECTION:jsdoc-->
 
 <!--START_SECTION:file:TUTORIAL.md-->
 <!--END_SECTION:file:TUTORIAL.md-->
-
-<!--START_SECTION:file:INSTALLATION.md-->
-<!--END_SECTION:file:INSTALLATION.md-->
 
 ## License
 
