--- a/.README.md
+++ b/.README.md
@@ -18,11 +18,6 @@ Additionally, it has slightly different semantics. Putting a value into the map 
 <!--START_SECTION:file:TUTORIAL.md-->
 <!--END_SECTION:file:TUTORIAL.md-->
 
-## License
-
-<!--START_SECTION:file:LICENSE-->
-<!--END_SECTION:file:LICENSE-->
-
 ## Deployment Steps
 
 These are notes for deploying to NPM. I used `npmrc` to manage my NPM identities
@@ -35,3 +30,10 @@ These are notes for deploying to NPM. I used `npmrc` to manage my NPM identities
 * `npm publish --access public`
 * Then switch to `dev` branch
 * And then merge `main` into `dev` and push `dev` to origin
+
+## License
+
+<!--START_SECTION:file:LICENSE-->
+<!--END_SECTION:file:LICENSE-->
+
+MIT © [psenger](https://github.com/psenger)
